Add colcon test

--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -43,3 +43,7 @@ jobs:
       - name : Ament Cpplint
         run: |
           ament_cpplint src/ include/
+      
+      # - name : Colcon Test
+      #   run: |
+      #     colcon test-result --verbose
