--- a/package.xml
+++ b/package.xml
@@ -17,8 +17,8 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  
-  <test_depend>ament_cpplint</test_depend>
+
+  <depend>ament_cpplint</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
