Feature ros2-cpp-template-node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,17 +11,23 @@ ament_auto_find_build_dependencies()
 
 include_directories(include)
 
-ament_auto_add_library(mcl2_node SHARED
-  src/template.cpp
+ament_auto_add_library(template_composition SHARED
+  src/composition/template_composition.cpp
 )
 
-target_link_libraries(mcl2_node
-)
+target_link_libraries(template_composition)
 
-rclcpp_components_register_node(mcl2_node
-  PLUGIN "Ros2CppTemplate::Template"
+rclcpp_components_register_node(template_composition
+  PLUGIN "Ros2CppTemplate::TemplateComposition"
   EXECUTABLE ${PROJECT_NAME}
 )
+
+ament_auto_add_executable(template_node
+  src/node/template_core.cpp
+  src/node/template_node.cpp
+)
+
+target_link_libraries(template_node)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
